--- a/contactpage.html
+++ b/contactpage.html
@@ -16,7 +16,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-center h-16">
                 <div class="flex items-center">
-                    <a href="homepage.html" class="text-xl sm:text-2xl font-bold text-orange-600">カフェ会＠！</a>
+                    <a href="index.html" class="text-xl sm:text-2xl font-bold text-orange-600">カフェ会＠！</a>
                 </div>
                 
                 <nav class="hidden md:flex space-x-8">
@@ -173,7 +173,7 @@
                 <div class="flex items-start">
                     <input type="checkbox" class="mt-1 h-4 w-4 text-orange-600 focus:ring-orange-500 border-gray-300 rounded">
                     <label class="ml-2 text-sm text-gray-600">
-                        <a href="/privacy" class="text-orange-600 hover:text-orange-700 underline">プライバシーポリシー</a>に同意します <span class="text-red-500">*</span>
+                        <a href="faqpage.html#privacy" class="text-orange-600 hover:text-orange-700 underline">プライバシーポリシー</a>に同意します <span class="text-red-500">*</span>
                     </label>
                 </div>
 
@@ -206,7 +206,7 @@
                     <p class="text-gray-600 text-sm mb-4">
                         イベント参加に関するよくある質問
                     </p>
-                    <a href="/faq#participant" class="text-blue-600 hover:text-blue-700 font-medium">確認する →</a>
+                    <a href="faqpage.html#participant" class="text-blue-600 hover:text-blue-700 font-medium">確認する →</a>
                 </div>
 
                 <div class="bg-white rounded-lg p-6 shadow-sm border border-gray-200">
@@ -219,7 +219,7 @@
                     <p class="text-gray-600 text-sm mb-4">
                         加盟・主催に関するよくある質問
                     </p>
-                    <a href="/faq#organizer" class="text-green-600 hover:text-green-700 font-medium">確認する →</a>
+                    <a href="faqpage.html#organizer" class="text-green-600 hover:text-green-700 font-medium">確認する →</a>
                 </div>
             </div>
         </div>
@@ -313,8 +313,8 @@
                     <ul class="space-y-2 text-gray-300">
                         <li><a href="faqpage.html" class="hover:text-white transition-colors">よくある質問</a></li>
                         <li><a href="contactpage.html" class="hover:text-white transition-colors">お問い合わせ</a></li>
-                        <li><a href="homepage.html" class="hover:text-white transition-colors">利用規約</a></li>
-                        <li><a href="homepage.html" class="hover:text-white transition-colors">プライバシーポリシー</a></li>
+                        <li><a href="#" class="hover:text-white transition-colors">利用規約</a></li>
+                        <li><a href="faqpage.html#privacy" class="hover:text-white transition-colors">プライバシーポリシー</a></li>
                     </ul>
                 </div>
             </div>
