--- a/loginpage.html
+++ b/loginpage.html
@@ -16,7 +16,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-center h-16">
                 <div class="flex items-center">
-                    <a href="homepage.html" class="text-xl sm:text-2xl font-bold text-orange-600">カフェ会＠！</a>
+                    <a href="index.html" class="text-xl sm:text-2xl font-bold text-orange-600">カフェ会＠！</a>
                 </div>
                 <nav class="hidden md:flex space-x-6">
                     <a href="Event searchlist pages.html" class="text-gray-600 hover:text-orange-600 transition-colors">イベント検索</a>
@@ -113,7 +113,7 @@
                             </label>
                         </div>
                         <div class="text-sm">
-                            <a href="/owner/forgot-password" class="text-orange-600 hover:text-orange-700 font-medium">
+                            <a href="#" class="text-orange-600 hover:text-orange-700 font-medium">
                                 パスワードを忘れた方
                             </a>
                         </div>
@@ -171,7 +171,7 @@
             <div class="text-center">
                 <p class="text-gray-600">
                     まだアカウントをお持ちでない方は
-                    <a href="/join" class="text-orange-600 hover:text-orange-700 font-medium">
+                    <a href="Joinaffiliate recruitment page.html" class="text-orange-600 hover:text-orange-700 font-medium">
                         主催者応募はこちら
                     </a>
                 </p>
@@ -181,14 +181,14 @@
             <div class="bg-gray-100 rounded-xl p-6">
                 <h3 class="text-lg font-semibold text-gray-900 mb-4 text-center">サポート</h3>
                 <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
-                    <a href="/owner/help" class="flex items-center justify-center p-3 bg-white rounded-lg hover:bg-gray-50 transition-colors">
+                    <a href="#" class="flex items-center justify-center p-3 bg-white rounded-lg hover:bg-gray-50 transition-colors">
                         <svg class="w-5 h-5 text-orange-600 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8.228 9c.549-1.165 2.03-2 3.772-2 2.21 0 4 1.343 4 3 0 1.4-1.278 2.575-3.006 2.907-.542.104-.994.54-.994 1.093m0 3h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
                         </svg>
                         <span class="text-sm font-medium text-gray-700">ヘルプ</span>
                     </a>
                     
-                    <a href="/contact" class="flex items-center justify-center p-3 bg-white rounded-lg hover:bg-gray-50 transition-colors">
+                    <a href="contactpage.html" class="flex items-center justify-center p-3 bg-white rounded-lg hover:bg-gray-50 transition-colors">
                         <svg class="w-5 h-5 text-orange-600 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 4.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path>
                         </svg>
@@ -230,8 +230,8 @@
                 </div>
                 
                 <div class="flex space-x-6 text-sm">
-                    <a href="homepage.html" class="text-gray-600 hover:text-orange-600 transition-colors">利用規約</a>
-                    <a href="homepage.html" class="text-gray-600 hover:text-orange-600 transition-colors">プライバシーポリシー</a>
+                    <a href="#" class="text-gray-600 hover:text-orange-600 transition-colors">利用規約</a>
+                    <a href="faqpage.html#privacy" class="text-gray-600 hover:text-orange-600 transition-colors">プライバシーポリシー</a>
                     <a href="contactpage.html" class="text-gray-600 hover:text-orange-600 transition-colors">お問い合わせ</a>
                 </div>
             </div>
