--- a/Event searchlist pages.html
+++ b/Event searchlist pages.html
@@ -64,7 +64,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-center h-16">
                 <div class="flex items-center">
-                    <a href="homepage.html" class="text-xl sm:text-2xl font-bold text-orange-600">カフェ会＠！</a>
+                    <a href="index.html" class="text-xl sm:text-2xl font-bold text-orange-600">カフェ会＠！</a>
                 </div>
                 <nav class="hidden md:flex space-x-6">
                     <a href="Event searchlist pages.html" class="text-gray-600 hover:text-orange-600 transition-colors">イベント検索</a>
@@ -84,7 +84,7 @@
     <nav class="bg-white border-b border-gray-200 py-3">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex items-center space-x-2 text-sm text-gray-500">
-                <a href="homepage.html" class="hover:text-orange-600 transition-colors">ホーム</a>
+                <a href="index.html" class="hover:text-orange-600 transition-colors">ホーム</a>
                 <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
                 </svg>
@@ -92,7 +92,7 @@
                 <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
                 </svg>
-                <a href="/event/tokyo" class="hover:text-orange-600 transition-colors">東京都</a>
+                <a href="#" class="hover:text-orange-600 transition-colors">東京都</a>
                 <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
                 </svg>
@@ -700,8 +700,8 @@
                     <h4 class="text-lg font-semibold mb-4">サポート</h4>
                     <ul class="space-y-2">
                         <li><a href="contactpage.html" class="text-gray-300 hover:text-orange-400 transition-colors">お問い合わせ</a></li>
-                        <li><a href="homepage.html" class="text-gray-300 hover:text-orange-400 transition-colors">利用規約</a></li>
-                        <li><a href="homepage.html" class="text-gray-300 hover:text-orange-400 transition-colors">プライバシーポリシー</a></li>
+                        <li><a href="#" class="text-gray-300 hover:text-orange-400 transition-colors">利用規約</a></li>
+                        <li><a href="faqpage.html#privacy" class="text-gray-300 hover:text-orange-400 transition-colors">プライバシーポリシー</a></li>
                     </ul>
                 </div>
             </div>
