--- a/index.html
+++ b/index.html
@@ -1000,9 +1000,9 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-6 text-orange-400">法的情報</h4>
                     <ul class="space-y-3 text-gray-300">
-                        <li><a href="homepage.html" class="hover:text-white transition-colors flex items-center"><span class="w-2 h-2 bg-orange-500 rounded-full mr-3"></span>サイトトップ</a></li>
+                        <li><a href="index.html" class="hover:text-white transition-colors flex items-center"><span class="w-2 h-2 bg-orange-500 rounded-full mr-3"></span>サイトトップ</a></li>
                         <li><a href="franchise-terms page.html" class="hover:text-white transition-colors flex items-center"><span class="w-2 h-2 bg-orange-500 rounded-full mr-3"></span>パートナー加盟規約</a></li>
-                        <li><a href="/privacy" class="hover:text-white transition-colors flex items-center"><span class="w-2 h-2 bg-orange-500 rounded-full mr-3"></span>プライバシーポリシー</a></li>
+                        <li><a href="faqpage.html#privacy" class="hover:text-white transition-colors flex items-center"><span class="w-2 h-2 bg-orange-500 rounded-full mr-3"></span>プライバシーポリシー</a></li>
                         <li><a href="contactpage.html" class="hover:text-white transition-colors flex items-center"><span class="w-2 h-2 bg-orange-500 rounded-full mr-3"></span>お問い合わせ</a></li>
                     </ul>
                 </div>
