--- a/faqpage.html
+++ b/faqpage.html
@@ -569,6 +569,7 @@
             50% { background-position: 50% 10%; }
             100% { background-position: 100% 0%; }
         }
+        .bg-logo { background: url("./img/カフェ会＠！メインロゴ-01.png"); background-position: center; background-size: cover; border-radius: 50%; }
     </style>
 </head>
 <body class="bg-gray-50">
@@ -576,6 +577,10 @@
     <header class="bg-white shadow-sm border-b border-gray-200">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-center h-16">
+                <div class="flex items-center">
+                    <div class="w-10 h-10 bg-logo mr-3 b_50"></div>
+                    <a href="index.html" class="text-xl sm:text-2xl font-bold text-orange-600">カフェ会＠！</a>
+                </div>
                 <div class="flex items-center">
                     <a href="homepage.html" class="text-xl sm:text-2xl font-bold text-orange-600">カフェ会＠！</a>
                 </div>
