--- a/index.html
+++ b/index.html
@@ -999,7 +999,7 @@
                         あなたも<span class="text-yellow-300 drop-shadow-md">主催者</span>に<br>
                         なりませんか？
                     </h2>
-                    <p class="text-xl md:text-2xl mb-8 opacity-95 drop-shadow-md color_sub">
+                    <p class="text-xl md:text-2xl mb-8 opacity-95 drop-shadow-md text_black">
                         地域のコミュニティリーダーとして、
                         <br class="hidden md:block">
                         人と人をつなぐ素敵な仕事を始めませんか？
