--- a/Event searchlist pages.html
+++ b/Event searchlist pages.html
@@ -57,6 +57,15 @@
             .reveal-smooth { transition: none !important; }
             .tilt { transition: none !important; }
         }
+        .flex{
+            display: flex;
+        }
+        .auto{
+            margin: auto;
+        }
+        .b_50{
+            border-radius: 50%;
+        }
     </style>
 </head>
 <body class="bg-gray-50">
@@ -65,12 +74,12 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-center h-16">
                 <div class="flex items-center">
-                    <div class="w-10 h-10 bg-logo mr-3"></div>
+                    <div class="w-10 h-10 bg-logo mr-3 b_50"></div>
                     <a href="index.html" class="text-xl sm:text-2xl font-bold text-orange-600">カフェ会＠！</a>
                 </div>
                 <nav class="hidden md:flex space-x-6">
-                    <a href="Event searchlist pages.html" class="text-gray-600 hover:text-orange-600 transition-colors">イベント検索</a>
-                    <a href="Joinaffiliate recruitment page.html" class="text-gray-600 hover:text-orange-600 transition-colors">主催者募集</a>
+                    <a href="Event searchlist pages.html" class="text-gray-600 hover:text-orange-600 transition-colors flex"><span class="auto">イベント検索</span></a>
+                    <a href="Joinaffiliate recruitment page.html" class="text-gray-600 hover:text-orange-600 transition-colors flex"><span class="auto">主催者募集</span></a>
                     <a href="loginpage.html" class="bg-orange-600 text-white px-4 py-2 rounded-lg hover:bg-orange-700 transition-colors">主催者ログイン</a>
                 </nav>
                 <button class="md:hidden p-2">
