--- a/Joinaffiliate recruitment page.html
+++ b/Joinaffiliate recruitment page.html
@@ -8,8 +8,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
         body { font-family: 'Noto Sans JP', sans-serif; }
-        .gradient-bg { background: url("./img/bg1.png"); background-position: center; background-size: cover;}
-
+        .gradient-bg { background: url("./img/bg1.png"); background-position: center; background-size: cover;  min-height: 100vh;}
+        .flex{
+            display: flex;
+        }
+        .auto{
+            margin: auto;
+        }
+        .bg-logo { background: url("./img/カフェ会＠！メインロゴ-01.png"); background-position: center; background-size: cover; border-radius: 50%; }
     </style>
 </head>
 <body class="bg-gray-50">
@@ -18,11 +24,12 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-center h-16">
                 <div class="flex items-center">
-                    <a href="homepage.html" class="text-xl sm:text-2xl font-bold text-orange-600">カフェ会＠！</a>
+                    <div class="w-10 h-10 bg-logo mr-3 b_50"></div>
+                    <a href="index.html" class="text-xl sm:text-2xl font-bold text-orange-600">カフェ会＠！</a>
                 </div>
-                <nav class="hidden md:flex space-x-6">
-                    <a href="Event searchlist pages.html" class="text-gray-600 hover:text-orange-600 transition-colors">イベント検索</a>
-                    <a href="Joinaffiliate recruitment page.html" class="text-orange-600 font-medium">主催者募集</a>
+                <nav class="hidden md:flex space-x-6 flex">
+                    <a href="Event searchlist pages.html" class="text-gray-600 hover:text-orange-600 transition-colors flex"><span class="auto">イベント検索</span></a>
+                    <a href="Joinaffiliate recruitment page.html" class="text-orange-600 font-medium auto"><span>主催者募集</span></a>
                     <a href="loginpage.html" class="bg-orange-600 text-white px-4 py-2 rounded-lg hover:bg-orange-700 transition-colors">主催者ログイン</a>
                 </nav>
                 <button class="md:hidden p-2">
