fix:index complete

--- a/index.html
+++ b/index.html
@@ -524,7 +524,10 @@
             font-size: 30px !important;
         }
         .color_sub{
-            color: #ff6200 !important;
+            color: #1F5099 !important;
+        }
+        .color_sub1{
+            color: rgb(253 224 71) !important;
         }
     </style>
 </head>
@@ -999,32 +1002,32 @@
                         あなたも<span class="text-yellow-300 drop-shadow-md">主催者</span>に<br>
                         なりませんか？
                     </h2>
-                    <p class="text-xl md:text-2xl mb-8 opacity-95 drop-shadow-md text_black">
+                    <p class="text-xl md:text-2xl mb-8 opacity-95 drop-shadow-md color_sub1">
                         地域のコミュニティリーダーとして、
                         <br class="hidden md:block">
                         人と人をつなぐ素敵な仕事を始めませんか？
                     </p>
                     
-                    <div class="space-y-4 mb-8  text-white">
+                    <div class="space-y-4 mb-8 color_sub">
                         <div class="flex items-center bg-white/10 backdrop-blur-sm rounded-lg p-3 border border-white/20">
-                            <div class="w-6 h-6 bg-yellow-400 rounded-full flex items-center justify-center mr-4 shadow-lg">
-                                <svg class="w-4 h-4 text-purple-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <div class="w-6 h-6 rounded-full flex items-center justify-center mr-4 shadow-lg">
+                                <svg class="w-4 h-4 " fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
                                 </svg>
                             </div>
                             <span class="text-lg drop-shadow-sm">月収10万円〜30万円も可能</span>
                         </div>
                         <div class="flex items-center bg-white/10 backdrop-blur-sm rounded-lg p-3 border border-white/20">
-                            <div class="w-6 h-6 bg-yellow-400 rounded-full flex items-center justify-center mr-4 shadow-lg">
-                                <svg class="w-4 h-4 text-purple-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <div class="w-6 h-6 rounded-full flex items-center justify-center mr-4 shadow-lg">
+                                <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
                                 </svg>
                             </div>
                             <span class="text-lg drop-shadow-sm">充実したサポート体制</span>
                         </div>
                         <div class="flex items-center bg-white/10 backdrop-blur-sm rounded-lg p-3 border border-white/20">
-                            <div class="w-6 h-6 bg-yellow-400 rounded-full flex items-center justify-center mr-4 shadow-lg">
-                                <svg class="w-4 h-4 text-purple-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <div class="w-6 h-6 rounded-full flex items-center justify-center mr-4 shadow-lg">
+                                <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
                                 </svg>
                             </div>
@@ -1033,10 +1036,10 @@
                     </div>
                     
                     <div class="flex flex-col sm:flex-row gap-4">
-                        <a href="Joinaffiliate recruitment page.html" class="bg-yellow-400 hover:bg-yellow-500 text-purple-900 font-bold py-4 px-8 transition-all duration-300 transform hover:scale-105 text-center magnetic rounded-lg shadow-lg hover:shadow-xl backdrop-blur-sm" data-magnetic>
+                        <a href="Joinaffiliate recruitment page.html" class="bg-blue-400 hover:bg-white-500 font-bold py-4 px-8 transition-all duration-300 transform hover:scale-105 text-center magnetic rounded-lg shadow-lg hover:shadow-xl text-white" data-magnetic>
                             主催者として参加する
                         </a>
-                        <a href="contactpage.html" class="border-2 border-white/80 hover:bg-white/90 hover:text-purple-600 text-white font-bold py-4 px-8 transition-all duration-300 text-center magnetic rounded-lg backdrop-blur-sm hover:shadow-lg" data-magnetic>
+                        <a href="contactpage.html" class="border-2 border-white/80 hover:bg-white/90 hover: text-white font-bold py-4 px-8 transition-all duration-300 text-center magnetic rounded-lg backdrop-blur-sm hover:shadow-lg" data-magnetic>
                             詳しく相談する
                         </a>
                     </div>
