fix:design_index

--- a/index.html
+++ b/index.html
@@ -529,6 +529,22 @@
         .color_sub1{
             color: rgb(253 224 71) !important;
         }
+        .h_60{
+            height: 150px;
+        }
+        .p-5{
+            height: auto;
+        }
+        .font-20{
+            font-size: 25px !important;
+            text-shadow: 2px 2px 2px #b1a6a6 ;
+        }
+        .black_shadow{
+            text-shadow: 2px 3px 2px rgb(87, 84, 84);
+        }
+        .white_shadow{
+            text-shadow: 2px 3px 2px rgb(255, 255, 255);
+        }
     </style>
 </head>
 <body class="bg-gray-50">
@@ -609,10 +625,10 @@
                 <p class="text-xl md:text-2xl lg:text-3xl font-light mb-8 opacity-95 scroll-wave-in scroll-delay-2 text-white drop-shadow-lg">
                     気軽で安心なコミュニティ体験を提供
                 </p>
-                <p class="text-lg md:text-xl opacity-95 max-w-3xl mx-auto leading-relaxed scroll-wave-in scroll-delay-2 text-white drop-shadow-md">
+                <p class="text-lg md:text-xl opacity-95 max-w-3xl mx-auto leading-relaxed scroll-wave-in scroll-delay-2 text-white drop-shadow-md font-20">
                     全国市区郡単位での地域密着型イベント。ログイン不要で簡単予約、
                     <br class="hidden md:block">
-                    あなたの街で新しい出会いと笑顔を見つけませんか？
+                    あなたの街で新しい出会いと笑顔を見つけませんか？    
                 </p>
             </div>
         </div>          
@@ -651,7 +667,9 @@
                             <span class="text-xs text-slate-500">東京・渋谷区</span>
                         </div>
                         <h3 class="text-lg font-semibold text-slate-800 mb-1">朝活会 - ポジティブが集まる</h3>
-                        <p class="text-sm text-slate-600 mb-4">12/25 (月) 7:30-9:00</p>
+                        <p class="h_60">さまざまな業界のプロフェッショナルや起業家が集い、アイデアを共有し、コラボレーションを生み出す交流イベントです。
+                            新たな出会い、ビジネスチャンス、視野の広がりを求める方におすすめです。</p>
+                        <p class="text-sm text-slate-600 mb-4 text_black">12/25 (月) 7:30-9:00</p>
                         <div class="flex items-center justify-between">
                             <span class="text-orange-600 font-bold">¥1,000</span>
                             <a href="Event searchlist pages.html" class="text-sm bg-orange-600 text-white px-3 py-2 rounded-lg hover:bg-orange-700 transition-colors">詳細</a>
@@ -673,7 +691,9 @@
                             <span class="text-xs text-amber-600">東京・新宿区</span>
                         </div>
                         <h3 class="text-lg font-semibold text-slate-800 mb-1">ビジネス異業種交流会</h3>
-                        <p class="text-sm text-slate-600 mb-4">12/28 (木) 19:00-21:00</p>
+                        <p class="h_60">1日の始まりを、笑顔と前向きなエネルギーでスタートしませんか？
+                            **「朝活会 - ポジティブが集まる」**は、ポジティブな仲間が集い、アイデアや気づきを共有する朝の交流イベントです。</p>
+                        <p class="text-sm text-slate-600 mb-4 text_black">12/28 (木) 19:00-21:00</p>
                         <div class="flex items-center justify-between">
                             <span class="text-orange-600 font-bold">¥2,000</span>
                             <a href="Event searchlist pages.html" class="text-sm bg-orange-600 text-white px-3 py-2 rounded-lg hover:bg-orange-700 transition-colors">詳細</a>
@@ -695,7 +715,10 @@
                             <span class="text-xs text-amber-600">東京・世田谷区</span>
                         </div>
                         <h3 class="text-lg font-semibold text-slate-800 mb-1">テーマ交流会</h3>
-                        <p class="text-sm text-slate-600 mb-4">12/29 (金) 18:00-20:00</p>
+                        <p class="h_60">共通のテーマを通じて、つながる・学ぶ・広がる。
+                            テーマ交流会は、毎回設定されたテーマをもとに、参加者同士が意見交換や情報共有を行う交流イベントです。
+                            業種や立場を越えて、同じ関心を持つ人と出会えるチャンスです。</p>
+                        <p class="text-sm text-slate-600 mb-4 text_black">12/29 (金) 18:00-20:00</p>
                         <div class="flex items-center justify-between">
                             <span class="text-orange-600 font-bold">¥1,500</span>
                             <a href="Event searchlist pages.html" class="text-sm bg-orange-600 text-white px-3 py-2 rounded-lg hover:bg-orange-700 transition-colors">詳細</a>
@@ -717,7 +740,9 @@
                             <span class="text-xs text-amber-600">東京・港区</span>
                         </div>
                         <h3 class="text-lg font-semibold text-slate-800 mb-1">友活Café会</h3>
-                        <p class="text-sm text-slate-600 mb-4">12/30 (土) 15:00-17:00</p>
+                        <p class="h_60">**「友活Café会」**は、ポジティブな人たちが集まり、ゆるやかに交流を楽しむカフェイベントです。
+                            初参加でも安心の、明るくアットホームな雰囲気が魅力です。</p>
+                        <p class="text-sm text-slate-600 mb-4 text_black">12/30 (土) 15:00-17:00</p>
                         <div class="flex items-center justify-between">
                             <span class="text-orange-600 font-bold">¥1,800</span>
                             <a href="Event searchlist pages.html" class="text-sm bg-orange-600 text-white px-3 py-2 rounded-lg hover:bg-orange-700 transition-colors">詳細</a>
@@ -739,7 +764,9 @@
                             <span class="text-xs text-amber-600">東京・品川区</span>
                         </div>
                         <h3 class="text-lg font-semibold text-slate-800 mb-1">友活女子会</h3>
-                        <p class="text-sm text-slate-600 mb-4">12/30 (土) 13:00-15:00</p>
+                        <p class="h_60">**「友活女子会」**は、ポジティブな女性たちが集まり、ゆったりとおしゃべりを楽しむ時間です。
+                            初めての方でも安心して参加できる、明るくあたたかい雰囲気が魅力です。</p>
+                        <p class="text-sm text-slate-600 mb-4 text_black">12/30 (土) 13:00-15:00</p>
                         <div class="flex items-center justify-between">
                             <span class="text-orange-600 font-bold">¥1,500</span>
                             <a href="Event searchlist pages.html" class="text-sm bg-orange-600 text-white px-3 py-2 rounded-lg hover:bg-orange-700 transition-colors">詳細</a>
@@ -761,7 +788,8 @@
                             <span class="text-xs text-amber-600">東京・中央区</span>
                         </div>
                         <h3 class="text-lg font-semibold text-slate-800 mb-1">恋活パーティー</h3>
-                        <p class="text-sm text-slate-600 mb-4">12/31 (日) 18:00-20:30</p>
+                            <p class="h_60">**「恋活パーティー」**は、素敵な出会いを求める男女が集まり、自然な会話と笑顔でつながる交流イベントです。</p>
+                        <p class="text-sm text-slate-600 mb-4 text_black">12/31 (日) 18:00-20:30</p>
                         <div class="flex items-center justify-between">
                             <span class="text-orange-600 font-bold">¥3,000</span>
                             <a href="Event searchlist pages.html" class="text-sm bg-orange-600 text-white px-3 py-2 rounded-lg hover:bg-orange-700 transition-colors">詳細</a>
@@ -998,11 +1026,11 @@
         <div class="relative z-10 max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="grid grid-cols-1 lg:grid-cols-2 gap-12 items-center">
                 <div>
-                    <h2 class="text-3xl md:text-5xl font-bold mb-6 drop-shadow-lg color-main">
+                    <h2 class="text-3xl md:text-5xl font-bold mb-6 drop-shadow-lg text-white black_shadow">
                         あなたも<span class="text-yellow-300 drop-shadow-md">主催者</span>に<br>
                         なりませんか？
                     </h2>
-                    <p class="text-xl md:text-2xl mb-8 opacity-95 drop-shadow-md color_sub1">
+                    <p class="text-xl md:text-2xl mb-8 opacity-95 drop-shadow-md text-white black_shadow">
                         地域のコミュニティリーダーとして、
                         <br class="hidden md:block">
                         人と人をつなぐ素敵な仕事を始めませんか？
@@ -1015,7 +1043,7 @@
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
                                 </svg>
                             </div>
-                            <span class="text-lg drop-shadow-sm">月収10万円〜30万円も可能</span>
+                            <span class="text-lg drop-shadow-sm  text-white">月収10万円〜30万円も可能</span>
                         </div>
                         <div class="flex items-center bg-white/10 backdrop-blur-sm rounded-lg p-3 border border-white/20">
                             <div class="w-6 h-6 rounded-full flex items-center justify-center mr-4 shadow-lg">
@@ -1023,7 +1051,7 @@
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
                                 </svg>
                             </div>
-                            <span class="text-lg drop-shadow-sm">充実したサポート体制</span>
+                            <span class="text-lg drop-shadow-sm  text-white">充実したサポート体制</span>
                         </div>
                         <div class="flex items-center bg-white/10 backdrop-blur-sm rounded-lg p-3 border border-white/20">
                             <div class="w-6 h-6 rounded-full flex items-center justify-center mr-4 shadow-lg">
@@ -1031,7 +1059,7 @@
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
                                 </svg>
                             </div>
-                            <span class="text-lg drop-shadow-sm">地域貢献で社会的意義</span>
+                            <span class="text-lg drop-shadow-sm  text-white">地域貢献で社会的意義</span>
                         </div>
                     </div>
                     
@@ -1418,8 +1446,8 @@
                 if (isInView && !element.classList.contains('visible')) {
                     // Add visible class with staggered delay based on scroll direction
                     const delay = scrollDirection === 'down' ? 
-                        index * 80 + Math.random() * 150 : 
-                        index * 60 + Math.random() * 100;
+                        index * 1 + Math.random() * 15 : 
+                        index * 1 + Math.random() * 10;
                         
                     setTimeout(() => {
                         element.classList.add('visible');
