--- a/Joinaffiliate recruitment page.html
+++ b/Joinaffiliate recruitment page.html
@@ -25,7 +25,7 @@
             <div class="flex justify-between items-center h-16">
                 <div class="flex items-center">
                     <div class="w-10 h-10 bg-logo mr-3 b_50"></div>
-                    <a href="index.html" class="text-xl sm:text-2xl font-bold text-orange-600">カフェ会＠！</a>
+                    <a href="homepage.html" class="text-xl sm:text-2xl font-bold text-orange-600">カフェ会＠！</a>
                 </div>
                 <nav class="hidden md:flex space-x-6 flex">
                     <a href="Event searchlist pages.html" class="text-gray-600 hover:text-orange-600 transition-colors flex"><span class="auto">イベント検索</span></a>
