--- a/contactpage.html
+++ b/contactpage.html
@@ -18,7 +18,7 @@
             <div class="flex justify-between items-center h-16">
                 <div class="flex items-center">
                     <div class="w-10 h-10 bg-logo mr-3"></div>
-                    <a href="index.html" class="text-xl sm:text-2xl font-bold text-orange-600">カフェ会＠！</a>
+                    <a href="homepage.html" class="text-xl sm:text-2xl font-bold text-orange-600">カフェ会＠！</a>
                 </div>
                 
                 <nav class="hidden md:flex space-x-8">
