--- a/faq-participants.html
+++ b/faq-participants.html
@@ -6,6 +6,7 @@
     <title>よくある質問 - カフェ会＠！</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="animations.css" />
     <style>
         body { font-family: 'Noto Sans JP', sans-serif; }
         
@@ -577,6 +578,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-center h-16">
                 <div class="flex items-center">
+                    <div class="w-10 h-10 bg-logo mr-3"></div>
                     <a href="homepage.html" class="text-xl sm:text-2xl font-bold text-orange-600">カフェ会＠！</a>
                 </div>
                 
@@ -1972,6 +1974,7 @@
                 }
             }
         </script>
+    <script src="animations.js"></script>
 </body>
 </html>
 </html>
