--- a/faqadmin.html
+++ b/faqadmin.html
@@ -13,6 +13,7 @@
         .faq-accordion {
             transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
         }
+        .bg-logo { background: url("./img/カフェ会＠！メインロゴ-01.png"); background-position: center; background-size: cover; border-radius: 50%; }
         
         .faq-item {
             background: white;
@@ -1113,6 +1114,7 @@
                         <div class="w-10 h-10 md:w-16 md:h-16 bg-logo from-orange-500 to-red-500 flex items-center justify-center">
                         </div>
                         <div>
+                            <div class="w-10 h-10 bg-logo mr-3"></div>
                             <h1 class="text-xl md:text-2xl font-bold bg-gradient-to-r  bg-clip-text text-transparent tracking-tight leading-tight color-main">カフェ会＠！</h1>
                             <p class="text-xs text-slate-600 hidden md:block font-medium tracking-wide text_black">地域コミュニティプラットフォーム</p>
                         </div>
@@ -1215,7 +1217,7 @@
                     <!-- General User FAQs -->
 
                     <!-- Admin/Organizer FAQs -->
-                    <div id="organizer-faqs" class="faq-category hidden">
+                    <div id="organizer-faqs" class="faq-category">
                         <div class="faq-accordion">
                             <!-- Becoming an Organizer -->
                             <div class="faq-item" data-category="organizer">
