--- a/faqpage.html
+++ b/faqpage.html
@@ -6,6 +6,7 @@
     <title>よくある質問 - カフェ会＠！</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="animations.css" />
     <style>
         body { font-family: 'Noto Sans JP', sans-serif; }
         
