--- a/homepage.html
+++ b/homepage.html
@@ -563,14 +563,14 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-center h-16 md:h-20">
                 <div class="flex items-center">
-                    <div class="flex items-center space-x-3">
+                    <a href="" class="flex items-center space-x-3">
                         <div class="w-10 h-10 md:w-16 md:h-16 bg-logo from-orange-500 to-red-500 flex items-center justify-center">
                         </div>
                         <div>
                             <h1 class="text-xl md:text-2xl font-bold bg-gradient-to-r  bg-clip-text text-transparent tracking-tight leading-tight color-main">カフェ会＠！</h1>
                             <p class="text-xs text-slate-600 hidden md:block font-medium tracking-wide text_black">地域コミュニティプラットフォーム</p>
                         </div>
-                    </div>
+                    </a>
                 </div>
                 
                 <nav class="hidden lg:flex space-x-8 text-center">
