--- a/Joinaffiliate recruitment page.html
+++ b/Joinaffiliate recruitment page.html
@@ -22,7 +22,7 @@
           var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert)
           var(--tw-backdrop-opacity) var(--tw-backdrop-saturate)
           var(--tw-backdrop-sepia);
-        background: url("./img/115.png");
+        background: url("./img/bg2.png");
         background-position: center;
         background-size: cover;
         min-height: 100vh;
@@ -129,7 +129,7 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background: url("./img/115.png");
+        background: url("./img/bg2.png");
         background-size: cover;
         background-attachment: fixed;
         filter: blur(2px);
