--- a/contactpage.html
+++ b/contactpage.html
@@ -825,6 +825,9 @@
 
     <!-- Hero Section -->
  <section class="bg-gradient-to-r from-orange-500 to-red-500 text-white py-12 md:py-16">
+        <div>
+          <img src="">
+        </div>
         <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
             <h1 class="text-3xl md:text-4xl font-bold mb-4">お問い合わせ</h1>
             <p class="text-lg md:text-xl opacity-90 mb-8">
