--- a/faqpage.html
+++ b/faqpage.html
@@ -1102,6 +1102,14 @@
             .white_shadow{
                 text-shadow: 2px 3px 2px rgb(255, 255, 255);
             }
+            body{ 
+                font-family: 'Noto Sans JP', sans-serif; 
+                background: url("./img/bg3.png");
+                background-size: cover;
+                background-attachment: fixed;
+                background-repeat: no-repeat;
+                min-height: 100vh;
+            }
     </style>
 </head>
 <body class="bg-gray-50">
@@ -1157,7 +1165,7 @@
     </header>
 
     <!-- Hero Section -->
-    <section class="bg-gradient-to-r from-orange-500 to-red-500 text-white py-12 md:py-16">
+    <section class="bg-gradient-to-r text-white py-12 md:py-16 bg_w">
         <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
             <div class="hero-content">
                 <h1 class="text-3xl md:text-4xl font-bold mb-4">よくある質問</h1>
