--- a/contactpage.html
+++ b/contactpage.html
@@ -708,39 +708,61 @@
       }
       .white_shadow {
         text-shadow: 2px 3px 2px rgb(255, 255, 255);
-      } 
+      }
       body {
         font-family: "Noto Sans JP", sans-serif;
         background: url("./img/bg4.png");
         background-size: cover;
         background-attachment: fixed;
         background-repeat: no-repeat;
-        min-height: 100vh; 
+        min-height: 100vh;
       }
 
       .bg_w {
         font-family: "Noto Sans JP", sans-serif;
-        background: url("./img/bg4.png");
         background-size: cover;
         background-attachment: fixed;
         background-repeat: no-repeat;
-        min-height: 100vh; 
-        
+        min-height: 100vh;
       }
-      .h_400{
-        height: 200px;
+      .h_400 {
+        height: 100px;
         position: relative;
         right: 0;
+        bottom: 0;
         width: 300px;
-        background-color: transparent !important;
+        background-color: rgba(255, 255, 255, 0.8) !important;
         backdrop-filter: blur(2px);
+        border: none;
+        padding: 10px !important;
       }
-      .p_0{
-          position: absolute;
-          left: 0;
-          bottom: 0%;
-          /* transform: translateY(-100%); */
-          
+      .p_0 {
+        position: absolute;
+        left: 0;
+        bottom: 0%;
+        padding: 0 !important;
+        /* transform: translateY(-100%); */
+      }
+      .auto {
+        margin: auto;
+      }
+      .mb_0 {
+        margin-bottom: 0;
+      }
+      .pointer{
+        cursor: pointer;
+      }
+      .padding_0{
+        padding-left: 0 !important;
+      }
+      .h_400:hover{
+        border-top: 3px solid #ec5c0e !important;
+        transition: 0.2s;
+      }
+      .blur-enhanced-white {
+        color: white !important;
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
+        font-weight: 600;
       }
     </style>
   </head>
@@ -857,15 +879,13 @@
     </header>
 
     <!-- Hero Section -->
-    <section
-      class=" text-white py-12 md:py-16 bg_w"
-    >
+    <section class="text-white py-12 md:py-16 bg_w">
       <div>
         <img src="" />
       </div>
       <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
-        <h1 class="text-3xl md:text-4xl font-bold mb-4">お問い合わせ</h1>
-        <p class="text-lg md:text-xl opacity-90 mb-8">
+        <h1 class="text-3xl md:text-4xl font-bold mb-4 text-3xl sm:text-4xl lg:text-5xl font-bold mb-6 leading-tight blur-enhanced-white">お問い合わせ</h1>
+        <p class="text-lg md:text-xl opacity-100 text-black">
           ご質問やご不明な点がございましたら、お気軽にお問い合わせください
         </p>
       </div>
@@ -873,31 +893,36 @@
 
     <!-- Contact Methods -->
     <section class="py-8 md:py-12 p_0">
-      <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-12">
+      <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8 padding_0">
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
           <!-- Email -->
           <div
-            class="bg-white rounded-lg shadow-sm border border-gray-200 p-6 text-center h_400"
+            class="bg-white rounded-lg shadow-sm border border-gray-200 p-6 text-center h_400 pointer"
           >
-            <div
-              class="w-12 h-12 bg-orange-100 rounded-lg flex items-center justify-center mx-auto mb-4"
-            >
-              <svg
-                class="h-6 w-6 text-orange-600"
-                fill="none"
-                stroke="currentColor"
-                viewBox="0 0 24 24"
+            <div class="flex">
+              <div
+                class="w-12 h-12 bg-orange-100 rounded-lg flex items-center justify-center mb-4 auto"
               >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M3 8l7.89 4.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"
-                ></path>
-              </svg>
+                <svg
+                  class="h-6 w-6 text-orange-600"
+                  fill="none"
+                  stroke="currentColor"
+                  viewBox="0 0 24 24"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M3 8l7.89 4.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"
+                  ></path>
+                </svg>
+              </div>
+              <div class="auto">
+                <h3 class="text-lg font-medium text-gray-900 mb-2">メール</h3>
+                <p class="text-gray-600 text-sm mb-2">24時間受付中</p>
+              </div>
             </div>
-            <h3 class="text-lg font-medium text-gray-900 mb-2">メール</h3>
-            <p class="text-gray-600 text-sm mb-4">24時間受付中</p>
+
             <a
               href="mailto:info@cafekai.jp"
               class="text-orange-600 hover:text-orange-700 font-medium"
@@ -907,27 +932,31 @@
 
           <!-- Phone -->
           <div
-            class="bg-white rounded-lg shadow-sm border border-gray-200 p-6 text-center h_400"
+            class="bg-white rounded-lg shadow-sm border border-gray-200 p-6 text-center h_400 pointer"
           >
-            <div
-              class="w-12 h-12 bg-green-100 rounded-lg flex items-center justify-center mx-auto mb-4"
-            >
-              <svg
-                class="h-6 w-6 text-green-600"
-                fill="none"
-                stroke="currentColor"
-                viewBox="0 0 24 24"
+            <div class="flex">
+              <div
+                class="w-12 h-12 bg-orange-100 rounded-lg flex items-center justify-center mb-4 auto"
               >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"
-                ></path>
-              </svg>
+                <svg
+                  class="h-6 w-6 text-green-600"
+                  fill="none"
+                  stroke="currentColor"
+                  viewBox="0 0 24 24"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"
+                  ></path>
+                </svg>
+              </div>
+              <div class="auto">
+                <h3 class="text-lg font-medium text-gray-900 mb-2">電話</h3>
+                <p class="text-gray-600 text-sm mb-2">平日 10:00-18:00</p>
+              </div>
             </div>
-            <h3 class="text-lg font-medium text-gray-900 mb-2">電話</h3>
-            <p class="text-gray-600 text-sm mb-4">平日 10:00-18:00</p>
             <a
               href="tel:03-1234-5678"
               class="text-green-600 hover:text-green-700 font-medium"
@@ -937,23 +966,28 @@
 
           <!-- LINE -->
           <div
-            class="bg-white rounded-lg shadow-sm border border-gray-200 p-6 text-center h_400"
+            class="bg-white rounded-lg shadow-sm border border-gray-200 p-6 text-center h_400 pointer"
           >
-            <div
-              class="w-12 h-12 bg-green-100 rounded-lg flex items-center justify-center mx-auto mb-4"
-            >
-              <svg
-                class="h-6 w-6 text-green-600"
-                fill="currentColor"
-                viewBox="0 0 24 24"
+            <div class="flex">
+              <div
+                class="w-12 h-12 bg-orange-100 rounded-lg flex items-center justify-center mb-4 auto"
               >
-                <path
-                  d="M19.365 9.863c.349 0 .63.285.63.631 0 .345-.281.63-.63.63H17.61v1.125h1.755c.349 0 .63.283.63.63 0 .344-.281.629-.63.629h-2.386c-.345 0-.627-.285-.627-.629V8.108c0-.345.282-.63.627-.63h2.386c.349 0 .63.285.63.63 0 .349-.281.63-.63.63H17.61v1.125h1.755zm-3.855 3.016c0 .27-.174.51-.432.596-.064.021-.133.031-.199.031-.211 0-.391-.09-.51-.25l-2.443-3.317v2.94c0 .344-.279.629-.631.629-.346 0-.626-.285-.626-.629V8.108c0-.27.173-.51.43-.595.06-.023.136-.033.194-.033.195 0 .375.104.495.254l2.462 3.33V8.108c0-.345.282-.63.63-.63.345 0 .63.285.63.63v4.771zm-5.741 0c0 .344-.282.629-.631.629-.345 0-.627-.285-.627-.629V8.108c0-.345.282-.63.627-.63.349 0 .631.285.631.63v4.771zm-2.466.629H4.917c-.345 0-.63-.285-.63-.629V8.108c0-.345.285-.63.63-.63.348 0 .63.285.63.63v4.141h1.756c.348 0 .629.283.629.63 0 .344-.282.629-.629.629M24 10.314C24 4.943 18.615.572 12 .572S0 4.943 0 10.314c0 4.811 4.27 8.842 10.035 9.608.391.082.923.258 1.058.59.12.301.079.766.038 1.08l-.164 1.02c-.045.301-.24 1.186 1.049.645 1.291-.539 6.916-4.078 9.436-6.975C23.176 14.393 24 12.458 24 10.314"
-                />
-              </svg>
+                <svg
+                  class="h-6 w-6 text-green-600"
+                  fill="currentColor"
+                  viewBox="0 0 24 24"
+                >
+                  <path
+                    d="M19.365 9.863c.349 0 .63.285.63.631 0 .345-.281.63-.63.63H17.61v1.125h1.755c.349 0 .63.283.63.63 0 .344-.281.629-.63.629h-2.386c-.345 0-.627-.285-.627-.629V8.108c0-.345.282-.63.627-.63h2.386c.349 0 .63.285.63.63 0 .349-.281.63-.63.63H17.61v1.125h1.755zm-3.855 3.016c0 .27-.174.51-.432.596-.064.021-.133.031-.199.031-.211 0-.391-.09-.51-.25l-2.443-3.317v2.94c0 .344-.279.629-.631.629-.346 0-.626-.285-.626-.629V8.108c0-.27.173-.51.43-.595.06-.023.136-.033.194-.033.195 0 .375.104.495.254l2.462 3.33V8.108c0-.345.282-.63.63-.63.345 0 .63.285.63.63v4.771zm-5.741 0c0 .344-.282.629-.631.629-.345 0-.627-.285-.627-.629V8.108c0-.345.282-.63.627-.63.349 0 .631.285.631.63v4.771zm-2.466.629H4.917c-.345 0-.63-.285-.63-.629V8.108c0-.345.285-.63.63-.63.348 0 .63.285.63.63v4.141h1.756c.348 0 .629.283.629.63 0 .344-.282.629-.629.629M24 10.314C24 4.943 18.615.572 12 .572S0 4.943 0 10.314c0 4.811 4.27 8.842 10.035 9.608.391.082.923.258 1.058.59.12.301.079.766.038 1.08l-.164 1.02c-.045.301-.24 1.186 1.049.645 1.291-.539 6.916-4.078 9.436-6.975C23.176 14.393 24 12.458 24 10.314"
+                  />
+                </svg>
+              </div>
+              <div class="auto">
+                <h3 class="text-lg font-medium text-gray-900 mb-2">LINE</h3>
+                <p class="text-gray-600 text-sm mb-2">友達追加で簡単連絡</p>
+              </div>
             </div>
-            <h3 class="text-lg font-medium text-gray-900 mb-2">LINE</h3>
-            <p class="text-gray-600 text-sm mb-4">友達追加で簡単連絡</p>
+
             <a href="#" class="text-green-600 hover:text-green-700 font-medium"
               >@cafekai</a
             >
