--- a/faqpage.html
+++ b/faqpage.html
@@ -1110,11 +1110,22 @@
                 background-repeat: no-repeat;
                 min-height: 100vh;
             }
+            .header_op{
+                background-color: white;
+            }
+            .section1{
+                color: ;
+            }
+            .blur-enhanced-white {
+        color: white !important;
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
+        font-weight: 600;
+      }
     </style>
 </head>
 <body class="bg-gray-50">
     <!-- Header -->
-  <header class="shadow-xl border-b border-orange-200 sticky top-0 z-50 md-elevation-2 bg-white">
+  <header class="shadow-xl border-b border-orange-200 sticky top-0 z-50 md-elevation-2 bg-white header_op">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-center h-16 md:h-20">
                 <div class="flex items-center">
@@ -1167,8 +1178,8 @@
     <!-- Hero Section -->
     <section class="bg-gradient-to-r text-white py-12 md:py-16 bg_w">
         <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
-            <div class="hero-content">
-                <h1 class="text-3xl md:text-4xl font-bold mb-4">よくある質問</h1>
+            <div class="hero-content section1">
+                <h1 class="text-3xl md:text-4xl font-bold mb-4 text-3xl sm:text-4xl lg:text-5xl font-bold mb-6 leading-tight blur-enhanced-white">よくある質問</h1>
                 <p class="text-lg md:text-xl opacity-90 mb-8">
                     カフェ会＠！に関するよくある質問をまとめました
                 </p>
@@ -2328,6 +2339,7 @@
                 }
             }
         </script>
+        
 </body>
 </html>
 </html>
