--- a/contactpage.html
+++ b/contactpage.html
@@ -568,6 +568,14 @@
         scroll-behavior: smooth;
       }
 
+      /* Header hide/show on scroll direction */
+      body.scroll-down header {
+        transform: translateY(-100%);
+      }
+      body.scroll-up header {
+        transform: translateY(0);
+      }
+
       /* Staggered animation delays */
       .scroll-delay-1 {
         transition-delay: 0.1s;
@@ -775,9 +783,10 @@
     </style>
   </head>
   <body class="bg-gray-50">
+    <div class="scroll-progress"></div>
     <!-- Header -->
     <header
-      class="shadow-xl border-b border-orange-200 sticky top-0 z-50 md-elevation-2 bg-white"
+      class="shadow-xl border-b border-orange-200 sticky top-0 z-50 md-elevation-2 bg-white transition-transform duration-300"
     >
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="flex justify-between items-center h-16 md:h-20">
@@ -888,7 +897,7 @@
 
     <!-- Hero Section -->
     <section class="text-white py-12 md:py-16 bg_w">
-      <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 text-center center">
+      <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 text-center center reveal-smooth scroll-fade-in">
         <h1 class="text-3xl md:text-4xl font-bold mb-4 text-3xl sm:text-4xl lg:text-5xl font-bold mb-6 leading-tight blur-enhanced-white">お問い合わせ</h1>
         <p class="text-lg md:text-xl opacity-100 text-black ">
           ご質問やご不明な点がございましたら、お気軽にお問い合わせください
@@ -902,7 +911,7 @@
         <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
           <!-- Email -->
           <div
-            class="bg-white rounded-lg shadow-sm border border-gray-200 p-6 text-center h_400 pointer"
+            class="bg-white rounded-lg shadow-sm border border-gray-200 p-6 text-center h_400 pointer reveal-smooth scroll-slide-left"
           >
             <div class="flex">
               <div
@@ -937,7 +946,7 @@
 
           <!-- Phone -->
           <div
-            class="bg-white rounded-lg shadow-sm border border-gray-200 p-6 text-center h_400 pointer"
+            class="bg-white rounded-lg shadow-sm border border-gray-200 p-6 text-center h_400 pointer reveal-smooth scroll-fade-in"
           >
             <div class="flex">
               <div
@@ -971,7 +980,7 @@
 
           <!-- LINE -->
           <div
-            class="bg-white rounded-lg shadow-sm border border-gray-200 p-6 text-center h_400 pointer"
+            class="bg-white rounded-lg shadow-sm border border-gray-200 p-6 text-center h_400 pointer reveal-smooth scroll-slide-right"
           >
             <div class="flex">
               <div
@@ -1003,7 +1012,7 @@
 
     <!-- Contact Form Section -->
     <section class="py-8 md:py-12 bg-white">
-      <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8">
+      <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 reveal-smooth scroll-fade-in">
         <div class="text-center mb-8">
           <h2 class="text-2xl md:text-3xl font-bold text-gray-900 mb-4">
             お問い合わせフォーム
@@ -1161,7 +1170,7 @@
 
     <!-- FAQ Link Section -->
     <section class="py-8 md:py-12 bg-gray-50">
-      <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
+      <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 text-center reveal-smooth scroll-fade-in">
         <h2 class="text-2xl md:text-3xl font-bold text-gray-900 mb-4">
           お問い合わせ前に
         </h2>
@@ -1237,7 +1246,7 @@
 
     <!-- Office Information -->
     <section class="py-8 md:py-12 bg-white">
-      <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
+      <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8 reveal-smooth scroll-fade-in">
         <div class="text-center mb-8">
           <h2 class="text-2xl md:text-3xl font-bold text-gray-900 mb-4">
             会社情報
@@ -1442,6 +1451,83 @@
         </div>
       </div>
     </footer>
+    <div class="scroll-to-top" aria-label="Back to top" title="トップへ">
+      <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 15l-6-6-6 6"/></svg>
+    </div>
     <!-- <script src="animations.js"></script> -->
+    <script>
+      (function () {
+        var lastScrollY = window.pageYOffset || document.documentElement.scrollTop;
+        var ticking = false;
+
+        function onScroll() {
+          var currentY = window.pageYOffset || document.documentElement.scrollTop;
+          var body = document.body;
+          if (currentY > lastScrollY) {
+            body.classList.add('scroll-down');
+            body.classList.remove('scroll-up');
+          } else {
+            body.classList.add('scroll-up');
+            body.classList.remove('scroll-down');
+          }
+          lastScrollY = currentY;
+
+          // Progress bar
+          var docHeight = document.documentElement.scrollHeight - window.innerHeight;
+          var progress = docHeight > 0 ? (currentY / docHeight) * 100 : 0;
+          var bar = document.querySelector('.scroll-progress');
+          if (bar) bar.style.width = progress + '%';
+
+          // Back to top visibility
+          var topBtn = document.querySelector('.scroll-to-top');
+          if (topBtn) {
+            if (currentY > 300) topBtn.classList.add('visible');
+            else topBtn.classList.remove('visible');
+          }
+        }
+
+        window.addEventListener('scroll', function () {
+          if (!ticking) {
+            window.requestAnimationFrame(function () {
+              onScroll();
+              ticking = false;
+            });
+            ticking = true;
+          }
+        }, { passive: true });
+
+        // IntersectionObserver for reveal-on-scroll
+        var revealTargets = document.querySelectorAll('.scroll-fade-in, .scroll-slide-left, .scroll-slide-right, .scroll-scale-in, .scroll-bounce-in, .scroll-spin-in, .scroll-flip-in, .scroll-wave-in, .reveal-smooth');
+        if ('IntersectionObserver' in window) {
+          var io = new IntersectionObserver(function (entries) {
+            entries.forEach(function (entry) {
+              if (entry.isIntersecting) {
+                entry.target.classList.add('visible');
+                entry.target.classList.add('is-visible');
+                io.unobserve(entry.target);
+              }
+            });
+          }, { threshold: 0.15 });
+          revealTargets.forEach(function (el) { io.observe(el); });
+        } else {
+          // Fallback: make all visible
+          revealTargets.forEach(function (el) {
+            el.classList.add('visible');
+            el.classList.add('is-visible');
+          });
+        }
+
+        // Back to top behavior
+        var topBtnEl = document.querySelector('.scroll-to-top');
+        if (topBtnEl) {
+          topBtnEl.addEventListener('click', function () {
+            window.scrollTo({ top: 0, behavior: 'smooth' });
+          });
+        }
+
+        // Initial update
+        onScroll();
+      })();
+    </script>
   </body>
 </html>
